# VibeVoice

./: pyproject.toml
vibevoice/modular/: modeling_vibevoice_inference.py
